# python-project-lvl4

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.yml  test-coverage.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: models.py  settings.py  urls.py  users.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_rename_text_task_description.py  0002_task_status.py  0003_label.py  0003_rename_assignee_task_executor.py  0004_task_labels.py  0005_alter_label_name_alter_status_name.py  0006_remove_task_labels_alter_task_status.py  0007_tasklabel_task_labels_tasklabel_task.py  0008_alter_tasklabel_task.py  0009_alter_task_labels.py  0010_alter_task_assignee.py  0011_alter_label_name_alter_status_name_and_more.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/task_manager/: settings.py
task_manager/tasks/: models.py  urls.py  views.py
task_manager/templates/: base.html  bootstrap.html  delete.html  form.html  index.html  label_create.html  label_delete.html  label_update.html  status_create.html  status_delete.html  status_list.html  status_update.html  task_create.html  task_delete.html  task_detail.html  task_update.html  tasks_list.html  users.html  users_create.html  users_delete.html  users_login.html  users_update.html
task_manager/users/: models.py  urls.py  views.py
tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
tests/fixtures/: labels.json  statuses.json  tasks.json
(+18 files in other folders)
